# cnc-controller-opengl

./: .gitignore  CNCwithOpenGLfix2.py  README.md  pyproject.toml  requirements.txt  test.py
cnc_controller/: __init__.py  controller.py  info_window.py  main.py  main_window.py  opengl_widget.py  ui.py
scripts/: setup_macos_linux.sh  setup_windows.ps1
